--- a/mrover/_sass/_base.scss
+++ b/mrover/_sass/_base.scss
@@ -1,3 +1,34 @@
+.hero {
+   	background-color: $black;
+    height: 400px;
+	.hero-content {
+		width: 90%;
+		max-width: 400px;
+		color: white;
+		padding: 80px 0;
+	}
+}
+
+.section-divider {
+	width: 100%;
+	background-color: $text-color;
+	text-align: center;
+	h3 {
+		font-size: 32px;
+		padding: 10px 0;
+		text-transform: uppercase;
+		color: white;
+		margin: 0;
+	}
+}
+
+.wrap {
+	max-width: 1200px;
+	width: 90%;
+	margin: 0 auto;
+}
+
+
 /**
  * Reset some basic elements
  */
