--- a/mrover/css/main.scss
+++ b/mrover/css/main.scss
@@ -25,18 +25,11 @@ $grey-color-dark:  darken($grey-color, 25%);
 // Width of the content area
 $content-width:    1200px;
 
-$on-palm:          600px;
+$on-palm:          650px;
 $on-laptop:        800px;
 
 
 
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
 @mixin media-query($device) {
     @media screen and (max-width: $device) {
         @content;
@@ -47,9 +40,12 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
+        "variables",
         "base",
         "header",
         "home",
+        "contact",
+        "about",
         "layout",
         "syntax-highlighting"
 ;
