--- a/mrover/_includes/header.html
+++ b/mrover/_includes/header.html
@@ -17,7 +17,7 @@
         {% assign pages = site.pages | sort:"weight"  %}
         {% for my_page in pages %}
           {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+          <a class="page-link" href="{{ my_page.url | remove_first: '/' | prepend: base }}">{{ my_page.title }}</a>
           {% endif %}
         {% endfor %}
       </div>
