--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -273,12 +273,8 @@ Author: Connor Krupp
 Stylesheet: Home Page
 ******************************************************************/
 .home .hero {
-  background-image: url("images/home-bg.JPG");
+  background-image: url("images/home-bg.jpg");
   background-position: 20% 58%;
-  /*
-  background-image: url("images/team.jpg");
-  background-position: 20%;
-  */
   background-repeat: no-repeat;
   background-size: cover; }
 .home .row-container {
@@ -780,7 +776,7 @@ Stylesheet: Join Page Stylesheet
   text-align: center;
   padding-bottom: 30px; }
   .join-page .hero {
-    background-image: url("images/join-bg.JPG");
+    background-image: url("images/join-bg.jpg");
     background-repeat: no-repeat;
     background-position: center 45%;
     background-size: cover; }
@@ -803,7 +799,7 @@ Modified version of Home Page stylesheet
 Stylesheet: Home Page
 ******************************************************************/
 .rovers-page .hero {
-  background-image: url("images/rovers-bg.JPG");
+  background-image: url("images/rovers-bg.jpg");
   background-position: 20% 58%;
   background-repeat: no-repeat;
   background-size: cover; }
@@ -849,7 +845,7 @@ Stylesheet: Home Page
   background-color: #2c3e50;
   background-size: cover; }
   .rovers-page .row-container .block.two {
-    background-image: url("images/rovers/2017.JPG"); }
+    background-image: url("images/rovers/2017.jpg"); }
   .rovers-page .row-container .block.three {
     background-image: url("images/rovers/2016.jpg"); }
   .rovers-page .row-container .block.four {
