--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -321,11 +321,11 @@ Stylesheet: Home Page
     background-color: #2c3e50;
     background-size: cover; }
     .home .row-container .block.one {
-      background-image: url("images/team.jpg"); }
+      background-image: url("images/whoweare.jpg"); }
     .home .row-container .block.two {
       background-image: url("images/whatwedo.jpg"); }
     .home .row-container .block.three {
-      background-image: url("images/campus.jpg"); }
+      background-image: url("images/whereweare.jpg"); }
     @media (max-width: 768px) {
       .home .row-container .block {
         display: block;
