--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -169,7 +169,7 @@ pre {
   padding-bottom: 15px;
   text-align: center;
   font-size: 48px;
-  margin-bottom: 30px; }
+  margin-bottom: 15px; }
   .social-media-wrapper a {
     text-decoration: none;
     color: inherit; }
@@ -321,7 +321,8 @@ Stylesheet: Home Page
     background-color: #2c3e50;
     background-size: cover; }
     .home .row-container .block.one {
-      background-image: url("images/whoweare.jpg"); }
+      background-image: url("images/whoweare.jpg");
+      background-position: 50% 50%; }
     .home .row-container .block.two {
       background-image: url("images/whatwedo.jpg"); }
     .home .row-container .block.three {
