--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -364,7 +364,7 @@ Author: Connor Krupp
 Stylesheet: Contact Page Stylesheet
 ******************************************************************/
 .contact-page .hero {
-  background-image: url("images/contact-bg.jpg");
+  background-image: url("images/rover-on-ridge.jpg");
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: cover; }
