--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -273,7 +273,7 @@ Edited 2018: Michael Wolf
 Stylesheet: Home Page
 ******************************************************************/
 .home .hero {
-  background-image: url("images/home-bg.jpg");
+  background-image: url("images/rover-urc-19.jpg");
   background-position: 20% 58%;
   background-repeat: no-repeat;
   background-size: cover; }
@@ -924,7 +924,7 @@ Stylesheet: Home Page
   /* The dots/bullets/indicators */
   /* Fading animation */ }
   .rovers-page .hero {
-    background-image: url("images/rovers-bg.jpg");
+    background-image: url("images/team-urc.jpg");
     background-position: center 50%;
     background-repeat: no-repeat;
     background-size: cover; }
