--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -269,6 +269,7 @@ pre {
 /******************************************************************
 Author: Connor Krupp
 Edited 2018: Michael Wolf
+Edited 2019: Abigail Fox
 
 Stylesheet: Home Page
 ******************************************************************/
@@ -912,6 +913,7 @@ Stylesheet: Join Page Stylesheet
 /******************************************************************
 Author: Michael Wolf
 Modified version of Home Page stylesheet
+Edited 2019: Abigail Fox
 
 Stylesheet: Home Page
 ******************************************************************/
