updated cover photo

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -274,7 +274,7 @@ Edited 2019: Abigail Fox
 Stylesheet: Home Page
 ******************************************************************/
 .home .hero {
-  background-image: url("images/rover-urc-19.JPG");
+  background-image: url("images/rover-with-cones.JPG");
   background-position: 20% 58%;
   background-repeat: no-repeat;
   background-size: cover; }
