--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -3,7 +3,7 @@ COLORS
 *********************/
 .hero {
   background-color: #323944;
-  height: 400px; }
+  height: 440px; }
   .hero .hero-content {
     width: 90%;
     max-width: 400px;
@@ -274,8 +274,8 @@ Edited 2019: Abigail Fox
 Stylesheet: Home Page
 ******************************************************************/
 .home .hero {
-  background-image: url("images/hughey-horizon.jpg");
-  background-position: 20% 60%;
+  background-image: url("images/team-urc.JPG");
+  background-position: center 58.5%;
   background-repeat: no-repeat;
   background-size: cover; }
 .home .row-container {
@@ -392,7 +392,7 @@ Stylesheet: Front Page Stylesheet
 .about-page .hero {
   background-image: url("images/rover-on-ridge.jpg");
   background-repeat: no-repeat;
-  background-position: center 45%;
+  background-position: center 41%;
   background-size: cover; }
 .about-page .row-container {
   padding: 10px; }
@@ -422,25 +422,29 @@ Stylesheet: Front Page Stylesheet
     width: 320px;
     height: 200px;
     background-color: #2c3e50; }
-  .about-page .row-container .info-section, .about-page .row-container .subrow {
+  .about-page .row-container .info-section, .about-page .row-container .info-section--2, .about-page .row-container .info-section--3, .about-page .row-container .info-section--4, .about-page .row-container .subrow {
     width: 50%;
     text-align: center;
     float: left;
     padding: 30px 0; }
-    .about-page .row-container .info-section h4, .about-page .row-container .subrow h4 {
+    .about-page .row-container .info-section h4, .about-page .row-container .info-section--2 h4, .about-page .row-container .info-section--3 h4, .about-page .row-container .info-section--4 h4, .about-page .row-container .subrow h4 {
       font-size: 1.1em;
       font-weight: 700; }
-    .about-page .row-container .info-section .info-content, .about-page .row-container .subrow .info-content {
+    .about-page .row-container .info-section .info-content, .about-page .row-container .info-section--2 .info-content, .about-page .row-container .info-section--3 .info-content, .about-page .row-container .info-section--4 .info-content, .about-page .row-container .subrow .info-content {
       padding: 10px 30px; }
-    .about-page .row-container .info-section .info-block, .about-page .row-container .subrow .info-block {
+    .about-page .row-container .info-section .info-block, .about-page .row-container .info-section--2 .info-block, .about-page .row-container .info-section--3 .info-block, .about-page .row-container .info-section--4 .info-block, .about-page .row-container .subrow .info-block {
       margin: 0 auto;
       width: 160px;
       height: 120px;
       background-color: #2c3e50;
       background-image: url("images/160x120.png");
       background-size: cover; }
+    .about-page .row-container .info-section--3 {
+      width: 33%; }
+    .about-page .row-container .info-section--4 {
+      width: 25%; }
     @media (max-width: 620px) {
-      .about-page .row-container .info-section, .about-page .row-container .subrow {
+      .about-page .row-container .info-section, .about-page .row-container .info-section--2, .about-page .row-container .info-section--3, .about-page .row-container .info-section--4, .about-page .row-container .subrow {
         width: 100%; } }
   .about-page .row-container .subrow {
     text-align: center;
@@ -927,8 +931,8 @@ Stylesheet: Home Page
   /* The dots/bullets/indicators */
   /* Fading animation */ }
   .rovers-page .hero {
-    background-image: url("images/team-urc.JPG");
-    background-position: center 58.5%;
+    background-image: url("images/hughey-horizon.jpg");
+    background-position: 20% 60%;
     background-repeat: no-repeat;
     background-size: cover; }
   .rovers-page .content-wrapper {
@@ -1101,7 +1105,7 @@ Stylesheet: Sponsors Page Stylesheet
   text-align: center;
   padding-bottom: 30px; }
   .sponsors-page .hero {
-    background-image: url("images/sponsors-bg.jpg");
+    background-image: url("images/circuit-boards.jpg");
     background-repeat: no-repeat;
     background-position: center 45%;
     background-size: cover; }
