--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -422,43 +422,51 @@ Stylesheet: Front Page Stylesheet
     width: 320px;
     height: 200px;
     background-color: #2c3e50; }
-  .about-page .row-container .info-section, .about-page .row-container .info-section--2, .about-page .row-container .info-section--3, .about-page .row-container .info-section--4, .about-page .row-container .subrow {
+  .about-page .row-container .info-section, .about-page .row-container .info-section-full, .about-page .row-container .subrow, .about-page .row-container .subrow-2, .about-page .row-container .subrow-4, .about-page .row-container .subrow-3-left, .about-page .row-container .subrow-3-right {
     width: 50%;
     text-align: center;
     float: left;
     padding: 30px 0; }
-    .about-page .row-container .info-section h4, .about-page .row-container .info-section--2 h4, .about-page .row-container .info-section--3 h4, .about-page .row-container .info-section--4 h4, .about-page .row-container .subrow h4 {
+    .about-page .row-container .info-section h4, .about-page .row-container .info-section-full h4, .about-page .row-container .subrow h4, .about-page .row-container .subrow-2 h4, .about-page .row-container .subrow-4 h4, .about-page .row-container .subrow-3-left h4, .about-page .row-container .subrow-3-right h4 {
       font-size: 1.1em;
       font-weight: 700; }
-    .about-page .row-container .info-section .info-content, .about-page .row-container .info-section--2 .info-content, .about-page .row-container .info-section--3 .info-content, .about-page .row-container .info-section--4 .info-content, .about-page .row-container .subrow .info-content {
+    .about-page .row-container .info-section .info-content, .about-page .row-container .info-section-full .info-content, .about-page .row-container .subrow .info-content, .about-page .row-container .subrow-2 .info-content, .about-page .row-container .subrow-4 .info-content, .about-page .row-container .subrow-3-left .info-content, .about-page .row-container .subrow-3-right .info-content {
       padding: 10px 30px; }
-    .about-page .row-container .info-section .info-block, .about-page .row-container .info-section--2 .info-block, .about-page .row-container .info-section--3 .info-block, .about-page .row-container .info-section--4 .info-block, .about-page .row-container .subrow .info-block {
+    .about-page .row-container .info-section .info-block, .about-page .row-container .info-section-full .info-block, .about-page .row-container .subrow .info-block, .about-page .row-container .subrow-2 .info-block, .about-page .row-container .subrow-4 .info-block, .about-page .row-container .subrow-3-left .info-block, .about-page .row-container .subrow-3-right .info-block {
       margin: 0 auto;
       width: 160px;
       height: 120px;
       background-color: #2c3e50;
       background-image: url("images/160x120.png");
       background-size: cover; }
-    .about-page .row-container .info-section--3 {
-      width: 33%; }
-    .about-page .row-container .info-section--4 {
-      width: 25%; }
+    .about-page .row-container .info-section-full {
+      width: 100%; }
     @media (max-width: 620px) {
-      .about-page .row-container .info-section, .about-page .row-container .info-section--2, .about-page .row-container .info-section--3, .about-page .row-container .info-section--4, .about-page .row-container .subrow {
+      .about-page .row-container .info-section, .about-page .row-container .info-section-full, .about-page .row-container .subrow, .about-page .row-container .subrow-2, .about-page .row-container .subrow-4, .about-page .row-container .subrow-3-left, .about-page .row-container .subrow-3-right {
         width: 100%; } }
-  .about-page .row-container .subrow {
+  .about-page .row-container .subrow, .about-page .row-container .subrow-2, .about-page .row-container .subrow-4, .about-page .row-container .subrow-3-left, .about-page .row-container .subrow-3-right {
     text-align: center;
     float: left;
     width: 50%;
     padding: 0px;
     margin: 0px; }
-  .about-page .row-container .one-of-two-subrows {
-    width: 50%; }
+    .about-page .row-container .subrow-2 {
+      width: 100%; }
+    .about-page .row-container .subrow-4 {
+      width: 50%; }
     @media (max-width: 1280px) {
-      .about-page .row-container .one-of-two-subrows {
+      .about-page .row-container .subrow, .about-page .row-container .subrow-2, .about-page .row-container .subrow-4, .about-page .row-container .subrow-3-left, .about-page .row-container .subrow-3-right {
         width: 100%; } }
-  .about-page .row-container .one-of-one-subrow {
-    width: 100%; }
+    .about-page .row-container .subrow-3-left {
+      width: 67%; }
+      @media (max-width: 1000px) {
+        .about-page .row-container .subrow-3-left {
+          width: 100%; } }
+    .about-page .row-container .subrow-3-right {
+      width: 33%; }
+      @media (max-width: 1000px) {
+        .about-page .row-container .subrow-3-right {
+          width: 100%; } }
 .about-page .info-row-container .wrap, .about-page .info-row-container .sponsor-us-page .sponsor_us_wrapper, .sponsor-us-page .about-page .info-row-container .sponsor_us_wrapper {
   max-width: 1300px; }
 .about-page .row-electrical {
