--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -274,7 +274,7 @@ Edited 2019: Abigail Fox
 Stylesheet: Home Page
 ******************************************************************/
 .home .hero {
-  background-image: url("images/team-urc.JPG");
+  background-image: url("images/team-urc-2019-edited.JPG");
   background-position: center 58.5%;
   background-repeat: no-repeat;
   background-size: cover; }
