--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -143,7 +143,7 @@ Stylesheet: Home Page
 
 .home .row-container .block { width: 320px; height: 200px; background-color: #2c3e50; background-size: cover; }
 
-.home .row-container .block.one { background-image: url("images/whoweare.jpg"); background-position: 50% 50%; }
+.home .row-container .block.one { background-image: url("images/full_team.jpg"); background-position: 50% 50%; }
 
 .home .row-container .block.two { background-image: url("images/rover-with-cones.jpg"); }
 
