changed the picture on the contact page to a newer picture

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -168,7 +168,7 @@ Author: Connor Krupp
 
 Stylesheet: Contact Page Stylesheet
 ******************************************************************/
-.contact-page .hero { background-image: url("images/paint-the-rock.jpg"); background-repeat: no-repeat; background-position: center 56%; background-size: cover; }
+.contact-page .hero { background-image: url("images/festifall2022.jpg"); background-repeat: no-repeat; background-position: center 56%; background-size: cover; }
 
 .contact-page .contact-info { text-align: center; padding-bottom: 30px; }
 
