--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -117,7 +117,7 @@ Edited 2019: Abigail Fox
 
 Stylesheet: Home Page
 ******************************************************************/
-.home .hero { background-image: url("images/team-urc-2019-edited.jpg"); background-position: center 58.5%; background-repeat: no-repeat; background-size: cover; }
+.home .hero { background-image: url("images/rosie_circ_22.png"); background-position: center 58.5%; background-repeat: no-repeat; background-size: cover; }
 
 .home .row-container { padding: 10px 0px; }
 
@@ -143,7 +143,7 @@ Stylesheet: Home Page
 
 .home .row-container .block { width: 320px; height: 200px; background-color: #2c3e50; background-size: cover; }
 
-.home .row-container .block.one { background-image: url("images/full_team.jpg"); background-position: 50% 50%; }
+.home .row-container .block.one { background-image: url("images/circ22_awards.png"); background-position: 50% 50%; }
 
 .home .row-container .block.two { background-image: url("images/rover-with-cones.jpg"); }
 
